# catalog/pkg/openapi/model_agent_env_var.go
@@ -1,0 +1,146 @@
+/*
+Catalog REST API
+
+REST API for Kubeflow Hub Catalog
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the AgentEnvVar type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &AgentEnvVar{}
+
+// AgentEnvVar An environment variable required by an agent.
+type AgentEnvVar struct {
+	// Environment variable name.
+	Name string `json:"name"`
+	// Whether this variable is required for deployment.
+	Required bool `json:"required"`
+}
+
+type _AgentEnvVar AgentEnvVar
+
+// NewAgentEnvVar instantiates a new AgentEnvVar object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewAgentEnvVar(name string, required bool) *AgentEnvVar {
+	this := AgentEnvVar{}
+	this.Name = name
+	this.Required = required
+	return &this
+}
+
+// NewAgentEnvVarWithDefaults instantiates a new AgentEnvVar object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewAgentEnvVarWithDefaults() *AgentEnvVar {
+	this := AgentEnvVar{}
+	return &this
+}
+
+// GetName returns the Name field value
+func (o *AgentEnvVar) GetName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value
+// and a boolean to check if the value has been set.
+func (o *AgentEnvVar) GetNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Name, true
+}
+
+// SetName sets field value
+func (o *AgentEnvVar) SetName(v string) {
+	o.Name = v
+}
+
+// GetRequired returns the Required field value
+func (o *AgentEnvVar) GetRequired() bool {
+	if o == nil {
+		var ret bool
+		return ret
+	}
+
+	return o.Required
+}
+
+// GetRequiredOk returns a tuple with the Required field value
+// and a boolean to check if the value has been set.
+func (o *AgentEnvVar) GetRequiredOk() (*bool, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Required, true
+}
+
+// SetRequired sets field value
+func (o *AgentEnvVar) SetRequired(v bool) {
+	o.Required = v
+}
+
+func (o AgentEnvVar) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o AgentEnvVar) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["name"] = o.Name
+	toSerialize["required"] = o.Required
+	return toSerialize, nil
+}
+
+type NullableAgentEnvVar struct {
+	value *AgentEnvVar
+	isSet bool
+}
+
+func (v NullableAgentEnvVar) Get() *AgentEnvVar {
+	return v.value
+}
+
+func (v *NullableAgentEnvVar) Set(val *AgentEnvVar) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableAgentEnvVar) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableAgentEnvVar) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableAgentEnvVar(val *AgentEnvVar) *NullableAgentEnvVar {
+	return &NullableAgentEnvVar{value: val, isSet: true}
+}
+
+func (v NullableAgentEnvVar) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableAgentEnvVar) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
